<resources>
    <string name="app_name">TabletVendedor</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edClienteModeloEspecifico">¿El Cliente busca un\n modelo especifico?</string>

    <!--MainActivity -->
    <string name="tvSelecciona_dispositivo"><b>Selecciona un dispositivo</b> para transmitir</string>
    <string name="tvSelecciona_pantalla">Selecciona una pantalla</string>

    <!--App entel -->
    <string name="estado_cuenta">Estado de tu cuenta</string>
    <string name="consulta_saldo">Consulta de saldo</string>
    <string name="controla_planes">Controla tus planes</string>
    <string name="beneficios_zona">Beneficios Zona</string>

    <!--LoginIngresoVendedorActivity -->
    <string name="ingreso_vendedor">Ingreso Vendedor</string>
    <string name="nombre_vendedor">Nombre vendedor</string>
    <string name="rut_vendedor">RUT vendedor</string>
    <string name="entrar">entrar</string>
    <string name="error_longitud_requerida">Debe contener minimo de 8 Caracteres</string>
    <string name="error_incorrect_usuario">Este usuario es incorrecto</string>
    <string name="error_incorrect_password">Este password es incorrecto</string>
    <string name="error_campo_requirido">Este campo es requerido</string>
    <string name="name_progress">Iniciando Sesion...</string>

    <!--IngresoVendedorClienteActivity -->
    <string name="nombre_ejecutivo">Ignacio Ramirez</string>
    <string name="etiqueta_ejecutivo_tienda">Ejecutivo Venta entel Manquehue</string>
    <string name="ver_catalogo_libremente">ver cat\u00E1logo libremente</string>
    <string name="cerrar_sesion">cerrar sesi\u00F3n</string>
    <string name="atender_nuevo_cliente">Atender nuevo cliente</string>
    <string name="rut_cliente">RUT cliente</string>
    <string name="email_cliente">Email Cliente</string>
    <string name="ir_al_catalogo">ir al cat\u00E1logo</string>

    <!--HogarFragment -->
    <string name="telefonia_fija">Telefon\u00EDa Fija</string>
    <string name="television_hd">Televisi\u00F3n HD</string>
    <string name="internet">Internet</string>
    <string name="que_tal_un_pack">¿Que tal un pack?</string>
    <string name="ayudalo_encontrar_pack">ay\u00FAdalo a encontrar su pack ideal</string>
    <string name="doble_pack">Doble Pack_</string>
    <string name="triple_pack">Triple Pack_</string>

    <!--TriplePackFragment -->
    <string name="triple_pack2">Triple pAck_</string>
    <string name="recomienda_entel_hogar">Recomienda a tu cliente la experiencia completa entel hogar</string>
    <string name="television_telefonia_internet">Televisi\u00F3n + Telefon\u00EDa fija + Internet</string>
    <string name="revisa_detalle_cada_producto">Revisa el detalle de cada producto</string>

    <!--DoblePackFragment -->
    <string name="doble_pack2">Doble pAck_</string>
    <string name="ayuda_cliente_combinacion_perfecta">Ayuda a tu cliente a encontrar la combinacion perfecta para el</string>
    <string name="television_telefonia">Televisi\u00F3n + Telefon\u00EDa fija</string>
    <string name="television_internet">Televisi\u00F3n + Internet</string>
    <string name="internet_telefonia">Internet + Telefon\u00EDa fija</string>

    <!--Te ayudamos -->
    <string name="transferir_informacion"><b><i>Transferir</i></b> informaci\u00f3n a mi nuevo tel\u00e9fono</string>
    <string name="como_cuidar_tus_megas">C\u00f3mo cuidar tus megas</string>
    <string name="cuota">\u00f3 en 12 cuotas de</string>
    <string name="destacamos_este_mes">M\u00e1s <b><i>Accesorios</i></b> destacados</string>
    <string name="selecciona_dispositivo_cast"><b>Selecciona un dispositivo</b> para poder hacer cast</string>
    <string name="mas_equipos_destacados">M\u00e1s <b><i>Equipos</i></b> destacados</string>


</resources>
