<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_ingreso_vendedor"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AzulEntel"
    tools:context=".LoginIngresoVendedorActivity">

    <!-- INICIO LINEARLAYOUT SEPARADOR-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="match_parent">

    </LinearLayout>
    <!-- FIN LINEARLAYOUT SEPARADOR-->

    <!-- INICIO LINEARLAYOUT CONTENEDOR IMAGEN, CAMPOS DE TEXTO Y BOTON LOGIN VENDEDOR-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="match_parent">

        <!-- INICIO LINEARLAYOUT SEPARADOR-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="120dp">

        </LinearLayout>
        <!-- FIN LINEARLAYOUT SEPARADOR-->

        <!-- INICIO LINEARLAYOUT CONTENEDOR DE RELATIVELAYOUT IMAGEN, CAMPOS DE TEXTO Y BOTON LOGIN VENDEDOR-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- INICIO RELATIVELAYOUT-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Logo entel-->
                <ImageView
                    android:id="@+id/logoEntel"
                    android:layout_marginTop="25dp"                    android:layout_width="90dp"
                    android:layout_height="58dp"
                    android:background="@drawable/logoentelblanco"
                    android:layout_marginLeft="147dp"/>

                <!--Label ingreso vendedor-->
                <TextView
                    android:id="@+id/tvAtenderCliente"
                    android:text="@string/ingreso_vendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logoEntel"
                    android:textColor="@color/BlancoEntel"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="13dp"
                    android:textSize="16.5sp"/>

                <!--Label nombre vendedor-->
                <TextView
                    android:id="@+id/tvNombreVendedor"
                    android:text="@string/nombre_vendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAtenderCliente"
                    android:textColor="@color/BlancoEntel"
                    android:layout_marginTop="39dp"
                    android:layout_marginLeft="17dp"
                    android:textSize="11.5dp"/>

                <!--Campo nombre vendedor-->
                <EditText
                    android:id="@+id/etNombreVendedor"
                    android:layout_width="350dp"
                    android:layout_height="49dp"
                    android:layout_below="@id/tvNombreVendedor"
                    android:background="@drawable/bordes_redondeados_edittext_ingreso"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="17dp"/>

                <!--Label RUT vendedor-->
                <TextView
                    android:id="@+id/tvRutVendedor"
                    android:text="@string/rut_vendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etNombreVendedor"
                    android:textColor="@color/BlancoEntel"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="17dp"
                    android:textSize="11.5dp"/>

                <!--Campo RUT vendedor-->
                <EditText
                    android:id="@+id/etRutVendedor"
                    android:layout_width="350dp"
                    android:layout_height="49dp"
                    android:inputType="textPassword"
                    android:layout_below="@id/tvRutVendedor"
                    android:background="@drawable/bordes_redondeados_edittext_ingreso"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="17dp"/>

                <!--Boton ingreso vendedor-->
                <Button
                    android:id="@+id/btEntrarVendedor"
                    android:text="@string/entrar"
                    android:textSize="17dp"
                    android:textColor="@color/BlancoEntel"
                    android:textAllCaps="false"
                    android:layout_width="350dp"
                    android:layout_height="49dp"
                    android:layout_below="@id/etRutVendedor"
                    android:layout_marginTop="23dp"
                    android:layout_marginLeft="17dp"
                    android:background="@drawable/bordes_redondeados_boton_entrar_ingreso"/>

                <RelativeLayout
                    android:id="@+id/rlProgress"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"

                        android:layout_marginBottom="100dp" />

                    <TextView
                        android:id="@+id/tv_progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_progress"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_alignTop="@+id/progressBar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="55dp" />
                </RelativeLayout>

            </RelativeLayout>
            <!-- FIN RELATIVELAYOUT-->

        </LinearLayout>
        <!-- FIN LINEARLAYOUT CONTENEDOR DE RELATIVELAYOUT IMAGEN, CAMPOS DE TEXTO Y BOTON LOGIN VENDEDOR-->

    </LinearLayout>
    <!-- FIN LINEARLAYOUT CONTENEDOR IMAGEN, CAMPOS DE TEXTO Y BOTON LOGIN VENDEDOR-->

    <!-- INICIO LINEARLAYOUT SEPARADOR-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
    <!-- INICIO LINEARLAYOUT SEPARADOR-->


</LinearLayout>
